First stab at kata 1

--- a/BankingKata/BankingKata.csproj
+++ b/BankingKata/BankingKata.csproj
@@ -39,6 +39,10 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Account.cs" />
+    <Compile Include="AccountCode.cs" />
+    <Compile Include="Accounts.cs" />
+    <Compile Include="CashAmount.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
